apps/case-studies/case-4-escqrs-kafka/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cargo-tracker
  labels:
    app.kubernetes.io/part-of: cargo-tracker
